--- a/public/css/styles2.css
+++ b/public/css/styles2.css
@@ -195,11 +195,12 @@ a {
 
 .form-control input, select {
   width: 100%;
-  height: 40px;
+  /* height: 40px; */
   margin: 5px;
   padding: 3px 7px;
   font-size: 17px;
 }
+
 
 .form-control textarea {
   width: 100%;
@@ -331,5 +332,7 @@ footer {
   width:100%;
   text-align: center;
 }
+
+
 
 
