--- a/public/css/styles2.css
+++ b/public/css/styles2.css
@@ -363,6 +363,13 @@ footer {
   margin: 0px 0px 5px 0px;
 }
 
+.clarification{
+  background-color: #7FF9C1;
+  color: black;
+  padding: 10px;
+  margin: 0px 0px 5px 0px;
+}
+
 /* 4E8ED8 -fioletovo */
 
 .trial--quiz {
