--- a/public/css/styles2.css
+++ b/public/css/styles2.css
@@ -376,7 +376,7 @@ footer {
   width: 100%;
   text-align: center;
   padding: 10px;
-  background-color: #32757E;
+  background-color: #06854b;
   color: white;
   font-weight: bold;
   margin: 0px 0px 10px 0px;
