--- a/public/css/styles2.css
+++ b/public/css/styles2.css
@@ -158,8 +158,11 @@ a {
 .btn-block:hover {
   display: block;
   width: 100%;
-  color: rgb(254, 254, 255) !important;;
-  background-color: #c70a0a;
+  font-style: italic;
+  color: white;
+  /* color: rgb(253, 97, 97) !important;; */
+  background-color: #940412;
+  font-weight: bold;
 }
 
 .task {
@@ -425,7 +428,7 @@ footer {
 }
 
 .parent_cat{
-  background-color: #198754;
+  background-color: #387CD3;
 }
 
 .parent_cat a{
