--- a/public/css/checkout_quiz.css
+++ b/public/css/checkout_quiz.css
@@ -19,13 +19,13 @@ body, html {
     font-family: "Poppins", sans-serif;
 }
 .container {
-    padding: 20px;
+    padding-left: 20px;
     width: 80%;
     margin: 0 auto; /* Center the container */
     background-color: #fff; /* White background */
     min-height: 100%;
     box-sizing: border-box;
-    padding-top: 80px; /* Header height */
+    padding-top: 20px; /* Header height */
     padding-bottom: 80px; /* Footer height */
     box-shadow: 0px 7px 20px -2px #7f7e7e;
 }
