--- a/public/css/checkout_quiz.css
+++ b/public/css/checkout_quiz.css
@@ -29,6 +29,11 @@ body, html {
     padding-bottom: 80px; /* Footer height */
     box-shadow: 0px 7px 20px -2px #7f7e7e;
 }
+@media screen and (max-width: 768px) {
+    .container {
+      width: 100%; 
+    }
+  }
 
 header, footer {
     padding-left: 20px;
